--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
-    "next": "^13.0.6",
+    "eslint-config-next": "^14.2.9",
+    "i18next": "^23.15.0",
+    "next": "^14.2.9",
+    "next-i18next": "^15.3.1",
     "nextra": "2.0.1",
     "nextra-theme-docs": "2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
