--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
   "devDependencies": {
     "@types/node": "18.11.10",
     "typescript": "^4.9.3"
-  }
+  },
+  "main": "next.config.js",
+  "keywords": []
 }
