--- a/package.json
+++ b/package.json
@@ -18,20 +18,22 @@
   },
   "homepage": "https://github.com/shuding/nextra-docs-template#readme",
   "dependencies": {
-    "eslint-config-next": "^14.2.9",
-    "i18next": "^23.15.0",
-    "next": "^14.2.9",
-    "next-i18next": "^15.3.1",
-    "nextra": "2.0.1",
-    "nextra-theme-docs": "2.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.1"
+    "eslint-config-next": "^16.0.7",
+    "i18next": "^25.7.1",
+    "next": "^16.0.7",
+    "next-i18next": "^15.4.3",
+    "nextra": "^3.3.1",
+    "nextra-theme-docs": "^3.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-i18next": "^16.4.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.2",
+    "typescript": "^5.7.2"
   },
-  "main": "next.config.js",
+  "main": "next.config.mjs",
   "keywords": []
 }
