--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.7.2"
   },
   "main": "next.config.mjs",
