--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@next/mdx": "^16.0.7",
     "eslint-config-next": "^16.0.7",
     "i18next": "^25.7.1",
+    "lucide-react": "^0.556.0",
     "next": "^16.0.7",
     "next-i18next": "^15.4.3",
     "next-seo": "^6.6.0",
@@ -35,9 +36,9 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "3.4.1",
     "typescript": "^5.7.2"
   },
   "main": "next.config.mjs",
