--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
